<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddBookFragment"
    android:paddingTop="10dp"
    >

    <ScrollView
        android:id="@+id/scroll_view_addbook"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"

                >

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="200dp"
                    android:orientation="vertical"
                    android:paddingTop="30dp">

                    <ImageView

                        android:id="@+id/imgBook"
                        android:layout_width="130dp"
                        android:layout_height="150dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/photo_book" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    android:weightSum="9">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtTacGia"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/tac_gia"
                            android:background="#f4f4f2"

                            android:inputType="textCapWords" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtThemSach"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            android:hint="@string/book_name"
                            android:inputType="text"

                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:background="#f4f4f2"
                            />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtNhaSX"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/nha_xuat_ban"
                            android:textSize="15sp"
                            android:inputType="text"
                            android:background="#f4f4f2"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/the_loai"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Spinner
                        android:id="@+id/spTheLoai"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="10dp" />
                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/ngay_xuat_ban"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/edtNXB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/imgNXB"
                        android:clickable="false"
                        android:hint="@string/btn_date"
                        android:inputType="date"
                        android:textAlignment="center" />

                    <ImageView
                        android:id="@+id/imgNXB"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/calendar" />

                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/so_trang"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtTrang"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="40dp"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/txtTrangTT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="15dp"
                        android:text="@string/trang" />

                </RelativeLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gia_sach"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtGia"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="40dp"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/txtDonViGiaTT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="15dp"
                        android:text="@string/vnd" />

                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:paddingStart="8dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/document" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingStart="10dp"
                    android:text="@string/tom_tat"
                    android:textAppearance="?android:textAppearanceMedium" />

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/noi_dung"
                android:padding="10dp">

                <EditText
                    android:id="@+id/edtND"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="top"
                    android:hint="@string/noi_dung"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:paddingTop="10dp"
                    android:scrollbars="vertical"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:theme="@style/EditTextCustom" />
            </ScrollView>

            <Button
                android:id="@+id/btn_add_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="100dp"
                android:background="@color/color_Black"
                android:text="@string/btn_add_sach"
                android:textColor="@color/color_white" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>